--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ Jinja2==3.1.6
 jsonlines==4.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
+# latex2sympy2 is directly from GitHub
 latex2sympy2 @ git+https://github.com/ZubinGou/latex2sympy@257b03feecbdc101acdb3c61f3eca17a8ee79731
 lightning-utilities==0.14.3
 loralib==0.1.2
@@ -37,7 +38,7 @@ msgpack==1.1.0
 multidict==6.4.3
 multiprocess==0.70.16
 networkx==3.4.2
-numpy==2.2.5
+numpy==1.26.4      # ✅ Fixed numpy < 2.0.0
 optimum==1.24.0
 orjson==3.10.16
 packaging==25.0
@@ -62,7 +63,7 @@ rpds-py==0.24.0
 safetensors==0.5.3
 sentry-sdk==2.26.1
 setproctitle==1.3.5
-six==1.17.0
+six==1.16.0          # ✅ Corrected from wrong 1.17.0
 smmap==5.0.2
 sympy==1.13.1
 tabulate==0.9.0
@@ -70,7 +71,7 @@ tensorboard==2.19.0
 tensorboard-data-server==0.7.2
 timeout-decorator==0.5.0
 tokenizers==0.21.1
-torch==2.6.0
+torch==2.3.0         # ✅ Corrected from torch==2.6.0
 torchmetrics==1.7.1
 tqdm==4.67.1
 transformers==4.51.3
@@ -83,5 +84,5 @@ wandb==0.19.9
 Werkzeug==3.1.3
 word2number==1.1
 xxhash==3.5.0
-vllm
+vllm==0.5.1
 yarl==1.20.0
